--- a/event1.html
+++ b/event1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Physics Lab Tour - SPS USM Events</title>
+  <title>Rayborn Lecture Series - SPS USM Events</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -85,8 +85,8 @@
 
   <div class="event-header" data-aos="fade">
     <div>
-      <h1 class="text-4xl md:text-5xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Physics Lab Tour</h1>
-      <p class="text-xl">Explore Our State-of-the-Art Research Facilities</p>
+      <h1 class="text-4xl md:text-5xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Rayborn Lecture Series</h1>
+      <p class="text-xl">A Distinguished Lecture Series in Physics and Astronomy</p>
     </div>
   </div>
 
@@ -103,51 +103,45 @@
           <line x1="8" y1="2" x2="8" y2="6"></line>
           <line x1="3" y1="10" x2="21" y2="10"></line>
         </svg>
-        <span>September 15, 2025</span>
-      </div>
-      <div class="event-meta-item">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-          <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
-          <circle cx="12" cy="10" r="3"></circle>
-        </svg>
-        <span>Physics Building</span>
+        <span>September 23, 2025</span>
       </div>
       <div class="event-meta-item">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
           <circle cx="12" cy="12" r="10"></circle>
           <polyline points="12 6 12 12 16 14"></polyline>
         </svg>
-        <span>2:00 PM - 4:00 PM</span>
+        <span>Tech Talk: 1:00 PM - 2:00 PM<br>Main Lecture: 6:00 PM - 7:00 PM</span>
+      </div>
+      <div class="event-meta-item">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+          <circle cx="12" cy="10" r="3"></circle>
+        </svg>
+        <span>Bennett Auditorium</span>
       </div>
     </div>
 
     <div class="event-details" data-aos="fade-up">
-      <h2 class="text-2xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Event Overview</h2>
-      <p class="mb-4">Join us for an exclusive tour of USM's physics laboratories and research facilities. This is your chance to see cutting-edge equipment and learn about ongoing research projects from faculty and graduate students.</p>
+      <h2 class="text-2xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">About the Lecture Series</h2>
+      <p class="mb-6">In 2015, through a generous donation to the USM Foundation, Dr. and Mrs. Grayson H. Rayborn established the Grayson H. and Jane Dishong Rayborn Lecture Series in Physics and Astronomy.</p>
       
-      <p class="mb-4">Tour Highlights:</p>
-      <ul class="list-disc ml-6 mb-4">
-        <li>Quantum Physics Laboratory</li>
-        <li>Optics and Laser Research Facility</li>
-        <li>Materials Science Lab</li>
-        <li>Computational Physics Center</li>
-        <li>Student Research Areas</li>
-      </ul>
-
-      <p class="mb-4">What to Expect:</p>
-      <ul class="list-disc ml-6 mb-4">
-        <li>Hands-on demonstrations</li>
-        <li>Meet research faculty</li>
-        <li>Learn about research opportunities</li>
-        <li>Q&A sessions at each lab</li>
-        <li>Light refreshments provided</li>
-      </ul>
+      <p class="mb-6">In 1970, Dr. Rayborn joined the USM faculty and served until his retirement in a distinguished career in teaching, research, service, and administration. During his career, Dr. Rayborn served as chair of the Department of Physics and Astronomy, associate dean of the College of Science and Technology, and director of the School of Mathematical Sciences, as well as professor of physics and astronomy. Upon retirement, in recognition of his distinguished service to the University, Dr. Rayborn was awarded the title of professor emeritus of physics and astronomy.</p>
     </div>
 
     <div class="glass" data-aos="fade-up">
-      <h2 class="text-2xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Registration</h2>
-      <p class="mb-4">Space is limited to ensure the best experience for all participants. Please register in advance.</p>
-      <button class="btn btn-accent">Register Now</button>
+      <h2 class="text-2xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Schedule</h2>
+      <div class="space-y-6">
+        <div>
+          <h3 class="font-bold text-lg mb-2">Technical Talk</h3>
+          <p class="mb-2">1:00 PM - 2:00 PM</p>
+          <p>A detailed technical discussion aimed at faculty, graduate students, and advanced undergraduates.</p>
+        </div>
+        <div>
+          <h3 class="font-bold text-lg mb-2">Main Lecture</h3>
+          <p class="mb-2">6:00 PM - 7:00 PM</p>
+          <p>The main Rayborn Lecture, open to all students, faculty, and the general public.</p>
+        </div>
+      </div>
     </div>
   </div>
 
