--- a/event2.html
+++ b/event2.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Conference Trip - SPS USM Events</title>
+  <title>Vicksburg FREE STEM Night - SPS USM Events</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
     .event-header {
-      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('images/conference.jpg');
+      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://images.unsplash.com/photo-1580894732444-8ecded7900cd?ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80');
       background-size: cover;
       background-position: center;
       height: 400px;
@@ -85,8 +85,8 @@
 
   <div class="event-header" data-aos="fade">
     <div>
-      <h1 class="text-4xl md:text-5xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">APS Conference Trip</h1>
-      <p class="text-xl">Presenting Research at the American Physical Society Conference</p>
+      <h1 class="text-4xl md:text-5xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Vicksburg FREE STEM Night</h1>
+      <p class="text-xl">An Evening of Discovery and Innovation</p>
     </div>
   </div>
 
@@ -103,52 +103,64 @@
           <line x1="8" y1="2" x2="8" y2="6"></line>
           <line x1="3" y1="10" x2="21" y2="10"></line>
         </svg>
-        <span>October 10-14, 2025</span>
+        <span>October 2, 2025</span>
       </div>
       <div class="event-meta-item">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
           <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
           <circle cx="12" cy="10" r="3"></circle>
         </svg>
-        <span>Washington, DC</span>
+        <span>Southern Cultural Heritage Center, Vicksburg</span>
       </div>
       <div class="event-meta-item">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
           <circle cx="12" cy="12" r="10"></circle>
           <polyline points="12 6 12 12 16 14"></polyline>
         </svg>
-        <span>All Day</span>
+        <span>6:00 PM - 8:00 PM</span>
       </div>
     </div>
 
     <div class="event-details" data-aos="fade-up">
-      <h2 class="text-2xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Conference Details</h2>
-      <p class="mb-4">Join our SPS chapter as we attend the annual American Physical Society Conference. Our students will be presenting their groundbreaking research and representing USM on the national stage.</p>
+      <h2 class="text-2xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Event Overview</h2>
+      <p class="mb-4">For many children in Warren County, math and science can feel like abstract concepts locked in textbooks. On Oct. 2 at the Southern Cultural Heritage Center, volunteers across Vicksburg are coming together to spark curiosity and creativity at a free STEM Night packed with activities designed to inspire young learners.</p>
       
-      <p class="mb-4">Conference Highlights:</p>
-      <ul class="list-disc ml-6 mb-4">
-        <li>Student research presentations</li>
-        <li>Networking opportunities with leading physicists</li>
-        <li>Latest developments in physics research</li>
-        <li>Career development workshops</li>
-        <li>Social events with other SPS chapters</li>
-      </ul>
+      <p class="mb-4">The event will run from 6 to 8 p.m. and will feature multiple booths filled with hands-on science, technology, engineering and math challenges. From building structures to coding demonstrations, organizers say the evening is designed to connect students with the excitement of discovery and problem-solving.</p>
 
-      <p class="mb-4">Who Should Attend:</p>
-      <ul class="list-disc ml-6 mb-4">
-        <li>Students presenting research</li>
-        <li>SPS members interested in physics research</li>
-        <li>Students looking to network in the field</li>
-        <li>Faculty mentors and advisors</li>
-      </ul>
+      <blockquote class="border-l-4 pl-4 italic my-6 text-gray-600">
+        "I have always loved science, and I remember telling someone once that I would love to just do experiments and write reports for a job. At that point in time, I had no idea that was even a career option, let alone the one I wanted to pursue. It wasn't until a few years later, when a math teacher asked me if I ever thought of civil engineering as a career path, then I learned that I could use math and science to build things that help people. I got involved in this STEM night because you never know what small experience might shape someone's future career path and I hope to inspire future leaders and STEM professionals in the Vicksburg and Jackson area through this event."
+        <footer class="text-sm mt-2 font-semibold">- Joelle Westcott, Event Organizer</footer>
+      </blockquote>
 
-      <p>Travel and accommodation details will be provided to registered participants.</p>
+      <p class="mb-4">Organizers say the booths will be designed for all ages, ensuring that elementary, middle and high school students can find something engaging. Parents and community members are encouraged to attend, making the night a family-oriented celebration of learning.</p>
+      
+      <p class="mb-4">Events like STEM Night highlight the power of grassroots initiatives in communities like Vicksburg, where volunteers step in to provide meaningful enrichment experiences. These volunteers have worked tirelessly outside their regular jobs to put together a family-friendly event for the community.</p>
     </div>
 
     <div class="glass" data-aos="fade-up">
-      <h2 class="text-2xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Registration & Funding</h2>
-      <p class="mb-4">Limited funding is available for student presenters. Early registration is recommended.</p>
-      <button class="btn btn-accent">Apply Now</button>
+      <h2 class="text-2xl font-bold mb-4" style="font-family: 'Space Grotesk', sans-serif;">Event Details</h2>
+      <div class="grid md:grid-cols-2 gap-6">
+        <div>
+          <h3 class="font-bold text-lg mb-2">What to Expect</h3>
+          <ul class="list-disc ml-6 mb-4">
+            <li>Interactive STEM Activities</li>
+            <li>Hands-on Experiments</li>
+            <li>Building Challenges</li>
+            <li>Coding Demonstrations</li>
+            <li>Science Discovery Stations</li>
+          </ul>
+        </div>
+        <div>
+          <h3 class="font-bold text-lg mb-2">Important Information</h3>
+          <ul class="list-disc ml-6 mb-4">
+            <li>Free Admission</li>
+            <li>All Ages Welcome</li>
+            <li>Family-Friendly Event</li>
+            <li>No Registration Required</li>
+            <li>Drop in Any Time 6-8 PM</li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
 
