--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-10" data-aos="fade-up" data-aos-delay="200">
         <!-- Officer 1 -->
   <div class="glass p-6 flex flex-col items-center cursor-pointer officer-card" data-officer="president" data-aos="fade-up" data-aos-delay="0">
-          <img src="_faculty-profile-placeholder.jpg" class="w-28 h-28 rounded-full border-4 shadow-lg mb-4 object-cover" style="border-color:var(--accent)" alt="President">
+          <img src="Sallie_Ann.jpg" class="w-28 h-28 rounded-full border-4 shadow-lg mb-4 object-cover" style="border-color:var(--accent)" alt="President">
           <h3 class="text-lg" style="color:var(--accent); font-family:'Space Grotesk', sans-serif;">President</h3>
           <p class="font-semibold">Sallie Ann Schmidt</p>
         </div>
@@ -162,7 +162,7 @@
         </div>
         <!-- Officer 5 -->
   <div class="glass p-6 flex flex-col items-center cursor-pointer officer-card" data-officer="social">
-          <img src="_faculty-profile-placeholder.jpg" class="w-28 h-28 rounded-full border-4 shadow-lg mb-4 object-cover" style="border-color:var(--accent)" alt="Social Media Manager">
+          <img src="kastuv_gaire.jpg" class="w-28 h-28 rounded-full border-4 shadow-lg mb-4 object-cover" style="border-color:var(--accent)" alt="Social Media Manager">
           <h3 class="text-lg" style="color:var(--accent); font-family:'Space Grotesk', sans-serif;">Social Media Manager</h3>
           <p class="font-semibold">Kastuv Gaire</p>
         </div>
@@ -240,37 +240,23 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         <!-- Event 1 -->
         <div class="event-card" data-aos="fade-up" data-aos-delay="0">
-          <h3 class="text-xl" style="font-family:'Space Grotesk', sans-serif; color:var(--accent);">Physics Demo Day</h3>
-          <p>Join us for exciting experiments & demonstrations that bring physics to life!</p>
+          <h3 class="text-xl" style="font-family:'Space Grotesk', sans-serif; color:var(--accent);">Rayborn Lecture Series</h3>
+          <p>Join us for the prestigious Rayborn Lecture Series featuring technical talks and public lectures in physics and astronomy. Sept 23: Tech Talk (1PM) & Main Lecture (6PM).</p>
           <a href="event1.html">Learn More →</a>
         </div>
 
         <!-- Event 2 -->
         <div class="event-card" data-aos="fade-up" data-aos-delay="100">
-          <h3 class="text-xl" style="font-family:'Space Grotesk', sans-serif; color:var(--accent);">Conference Trip</h3>
-          <p>Watch our students present groundbreaking research at the APS Conference.</p>
+          <h3 class="text-xl" style="font-family:'Space Grotesk', sans-serif; color:var(--accent);">Vicksburg FREE STEM Night</h3>
+          <p>Join us at Southern Cultural Heritage Center for an evening of interactive STEM activities and demonstrations.</p>
           <a href="event2.html">Learn More →</a>
         </div>
 
         <!-- Event 3 -->
         <div class="event-card" data-aos="fade-up" data-aos-delay="200">
-          <h3 class="text-xl" style="font-family:'Space Grotesk', sans-serif; color:var(--accent);">Outreach Program</h3>
-          <p>Sharing physics with local schools through interactive demonstrations and workshops.</p>
+          <h3 class="text-xl" style="font-family:'Space Grotesk', sans-serif; color:var(--accent);">Science Saturday on the MS Gulf Coast</h3>
+          <p>FREE event at Walter Anderson Museum of Art featuring interactive STEAM exhibits, demonstrations, and activities. Part of the statewide Mississippi Science Festival!</p>
           <a href="event3.html">Learn More →</a>
-        </div>
-
-        <!-- Event 4 -->
-        <div class="event-card" data-aos="fade-up" data-aos-delay="300">
-          <h3 class="text-xl" style="font-family:'Space Grotesk', sans-serif; color:var(--accent);">Lab Tour</h3>
-          <p>Guided visit to our research facilities. See where the magic happens!</p>
-          <a href="event4.html">Learn More →</a>
-        </div>
-
-        <!-- Event 5 -->
-        <div class="event-card" data-aos="fade-up" data-aos-delay="400">
-          <h3 class="text-xl" style="font-family:'Space Grotesk', sans-serif; color:var(--accent);">Social Night</h3>
-          <p>Join us for games, networking, and fun with fellow physics enthusiasts!</p>
-          <a href="event5.html">Learn More →</a>
         </div>
       </div>
     </div>
@@ -401,7 +387,7 @@
             name: document.getElementById('name').value,
             email: emailInput.value,
             message: messageInput.value,
-            to: 'Nishant.Chaudhari@usm.edu'
+            to: 'societyusmphysics@gmail.com'
           };
 
           // Send email using EmailJS or similar service
@@ -613,7 +599,7 @@
           title: 'President',
           name: 'Sallie Ann Schmidt',
           description: 'Leading SPS with dedication and vision.',
-          image: '_faculty-profile-placeholder.jpg'
+          image: 'Sallie_Ann.jpg'
         },
         vp: {
           title: 'Vice President',
@@ -630,14 +616,15 @@
         secretary: {
           title: 'Secretary',
           name: 'Margaret Brune',
-          description: 'Maintaining records and communications.',
+          description: 
+          'Maintaining records and communications.',
           image: '_faculty-profile-placeholder.jpg'
         },
         social: {
           title: 'Social Media Manager',
           name: 'Kastuv Gaire',
           description: 'Managing SPS online presence and engagement.',
-          image: '_faculty-profile-placeholder.jpg'
+          image: 'kastuv_gaire.jpg'
         }
       };
 
