--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   </div>
         <!-- Officer 3 -->
   <div class="glass p-6 flex flex-col items-center cursor-pointer officer-card" data-officer="treasurer">
-          <img src="_faculty-profile-placeholder.jpg" class="w-28 h-28 rounded-full border-4 shadow-lg mb-4 object-cover" style="border-color:var(--accent)" alt="Treasurer">
+          <img src="faculty.jpg" class="w-28 h-28 rounded-full border-4 shadow-lg mb-4 object-cover" style="border-color:var(--accent)" alt="Treasurer">
           <h3 class="text-lg" style="color:var(--accent); font-family:'Space Grotesk', sans-serif;">Treasurer</h3>
           <p class="font-semibold">Eva Chalona</p>
         </div>
@@ -165,7 +165,7 @@
 
 
   <div class="glass p-6 flex flex-col items-center cursor-pointer officer-card" data-officer="secretary">
-          <img src="_faculty-profile-placeholder.jpg" class="w-28 h-28 rounded-full border-4 shadow-lg mb-4 object-cover" style="border-color:var(--accent)" alt="Secretary">
+          <img src="faculty.jpg" class="w-28 h-28 rounded-full border-4 shadow-lg mb-4 object-cover" style="border-color:var(--accent)" alt="Secretary">
           <h3 class="text-lg" style="color:var(--accent); font-family:'Space Grotesk', sans-serif;">Secretary</h3>
           <p class="font-semibold">Rylee Landry</p>
         </div>
@@ -635,13 +635,13 @@
           title: 'Secretary',
           name: 'Rylee Landry',
           description: 'Maintaining records and communications.',
-          image: '_faculty-profile-placeholder.jpg'
+          image: 'faculty.jpg'
         },
         treasurer: {
           title: 'Treasurer',
           name: 'Eva Chalona',
           description: 'Managing SPS finances and budgeting.',
-          image: '_faculty-profile-placeholder.jpg'
+          image: 'faculty.jpg'
         },
         social: {
           title: 'Social Media Manager',
