--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
 
   <div class="glass p-6 flex flex-col items-center cursor-pointer officer-card" data-officer="secretary">
-          <img src="faculty.jpg" class="w-28 h-28 rounded-full border-4 shadow-lg mb-4 object-cover" style="border-color:var(--accent)" alt="Secretary">
+          <img src="rylee_landry.jpg" class="w-28 h-28 rounded-full border-4 shadow-lg mb-4 object-cover" style="border-color:var(--accent)" alt="Secretary">
           <h3 class="text-lg" style="color:var(--accent); font-family:'Space Grotesk', sans-serif;">Secretary</h3>
           <p class="font-semibold">Rylee Landry</p>
         </div>
@@ -248,6 +248,13 @@
       <h2 class="text-3xl font-bold mb-8 text-center" data-aos="fade-down">Events</h2>
 
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+
+        <div class="event-card" data-aos="fade-up" data-aos-delay="200">
+          <h3 class="text-xl" style="font-family:'Space Grotesk', sans-serif; color:var(--accent);">Physics Demo Day Event</h3>
+          <p>Experience the thrill of live experiments, hands-on physics, and community creativity at USM’s Physics Demo Day!</p>
+          <a href="event4.html">Learn More →</a>
+        </div>
+        
         <!-- Event 1 -->
         <div class="event-card" data-aos="fade-up" data-aos-delay="0">
           <h3 class="text-xl" style="font-family:'Space Grotesk', sans-serif; color:var(--accent);">Rayborn Lecture Series</h3>
@@ -268,6 +275,9 @@
           <p>FREE event at Walter Anderson Museum of Art featuring interactive STEAM exhibits, demonstrations, and activities. Part of the statewide Mississippi Science Festival!</p>
           <a href="event3.html">Learn More →</a>
         </div>
+
+        
+
       </div>
     </div>
   </section>
@@ -462,7 +472,7 @@
           <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
           <circle cx="12" cy="10" r="3"></circle>
         </svg>
-        <span class="font-semibold">SPS Office: TEC 114</span>
+        <span class="font-semibold">SPS Office: TEC 114 A</span>
       </div>
       <div class="flex gap-6 items-center">
         <a href="https://www.instagram.com/sps_usm" target="_blank" rel="noopener noreferrer" class="hover:opacity-75 transition-opacity" aria-label="Follow us on Instagram">
