--- a/event1.html
+++ b/event1.html
@@ -148,6 +148,7 @@
           <a href="index.html#officers" class="nav-link text-sm">Officers</a>
           <a href="index.html#faculty" class="nav-link text-sm">Faculty</a>
           <a href="index.html#events" class="nav-link text-sm">Events</a>
+          <a href="photos.html" class="nav-link text-sm">Photos</a>
           <a href="index.html#contact" class="nav-link text-sm">Contact</a>
         </div>
       </div>
