--- a/event3.html
+++ b/event3.html
@@ -149,6 +149,7 @@
           <a href="index.html#officers" class="nav-link text-xs">Officers</a>
           <a href="index.html#faculty" class="nav-link text-xs">Faculty</a>
           <a href="index.html#events" class="nav-link text-xs">Events</a>
+          <a href="photos.html" class="nav-link text-xs">Photos</a>
           <a href="index.html#contact" class="nav-link text-xs">Contact</a>
         </div>
       </div>
@@ -169,10 +170,12 @@
     <div class="event-meta">
       <div class="event-meta-item">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-          <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
-          <circle cx="12" cy="10" r="3"></circle>
+          <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+          <line x1="16" y1="2" x2="16" y2="6"></line>
+          <line x1="8" y1="2" x2="8" y2="6"></line>
+          <line x1="3" y1="10" x2="21" y2="10"></line>
         </svg>
-        <span>Walter Anderson Museum of Art</span>
+        <span>September 20, 2025</span>
       </div>
       <div class="event-meta-item">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
