--- a/event4.html
+++ b/event4.html
@@ -148,6 +148,7 @@
           <a href="index.html#officers" class="nav-link text-sm">Officers</a>
           <a href="index.html#faculty" class="nav-link text-sm">Faculty</a>
           <a href="index.html#events" class="nav-link text-sm">Events</a>
+          <a href="photos.html" class="nav-link text-sm">Photos</a>
           <a href="index.html#contact" class="nav-link text-sm">Contact</a>
         </div>
       </div>
@@ -176,7 +177,7 @@
           <line x1="8" y1="2" x2="8" y2="6"></line>
           <line x1="3" y1="10" x2="21" y2="10"></line>
         </svg>
-        <span>September 11, 2025</span>
+        <span>September 18, 2025</span>
       </div>
       <div class="event-meta-item">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
