--- a/photos.html
+++ b/photos.html
@@ -395,6 +395,14 @@
 
       <!-- Photo Gallery -->
       <div class="photo-gallery">
+                        <!-- Coast Event 3 -->
+        <div class="photo-item" data-aos="fade-up" data-aos-delay="200">
+          <img src="image_events/coast_event3.jpg" alt="Gulf Coast Science Event" loading="lazy">
+          <div class="photo-caption">
+            <h3>Gulf Coast Science Event</h3>
+            <p>Science Saturday on the MS Gulf Coast - Having fun with kids</p>
+          </div>
+        </div>
         <!-- Demo Day Event -->
         <div class="photo-item" data-aos="fade-right" data-aos-delay="100">
           <img src="image_events/demo_day.jpg" alt="Physics Demo Day" loading="lazy">
